updated obsidian configs

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,5 +9,6 @@
   "attachmentFolderPath": "assets",
   "showInlineTitle": false,
   "vimMode": true,
-  "showLineNumber": true
+  "showLineNumber": true,
+  "showRibbon": false
 }
