--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,11 @@
 {
   "accentColor": "",
-  "nativeMenus": true
+  "nativeMenus": true,
+  "showViewHeader": true,
+  "enabledCssSnippets": [
+    "prev_next",
+    "mermaid_charts"
+  ],
+  "cssTheme": "Minimal",
+  "theme": "obsidian"
 }
